nova_tests/negative_capability/channel_sender_no_recv.nv
// EXPECT_CC_ERROR
//
// D91 (Plan 21): ChanWriter не имеет метода recv — capability isolation.
// tx имеет тип Nova_ChanWriter*, у которого нет recv в emit_c dispatch.
// Fallback emit'ит tx->recv() → C error: no member 'recv'.

module negative_capability.channel_sender_no_recv

test "sender cannot recv" {
    ro (tx, _rx) = Channel.new(1)
    ro _ = tx.recv()
}
